2010-07-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDateVector: Index argument is int here as well
	* src/RcppDatetimeVector: Idem
	* inst/include/classic/RcppDateVector.h: Idem
	* inst/include/classic/RcppDatetimeVector.h: Idem

	* inst/unitTests/runit.List.R: Added simple test for RcppList

2010-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/DateVector: Index argument is int; throw declared
	* src/DatetimeVector: Idem
	* inst/include/Rcpp/DateVector.h: Idem
	* inst/include/Rcpp/DatetimeVector.h: Idem

2010-06-28  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/Im.h:
	* inst/include/Rcpp/sugar/Re.h:
	* inst/include/Rcpp/sugar/Conj.h:
	* inst/include/Rcpp/sugar/Mod.h: added sugar functions for
	complex vectors: Re, Im, Conj, Mod

2010-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.3

	* debian/*: Similarly updated for new release to Debian

	* inst/unitTests/runTests.R: Stop-gap measure to reduce the number of
	tests run on Windows as we now have so many tests that the build
	exceeds the time limit granted by the win-builder service. The forced
	reduction of tests can be overcome by adding --allTests as a
	command-line argument on Windows, or by running on another platform.

2010-06-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/posix.h: anticipate R 2.12.0 switch of classes
	POSIXt and POSIXct

	* inst/include/classic: New home for the 'classic' API headers. Also
	some refactoring of the internals so that they can interoperate
	better withuse the new API.

2010-06-24  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/RangeIndexer.h: factored the RangeIndexer
	class out of Vector, so that we can at a later time specialize it for
	character vectors, lists, etc ...

2010-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: add struct tm member variable and
	sensible (ie non-intra-day) accessor functions; add SEXP ctor